rename slash index to fault index
Signed-off-by: Ignacio Hagopian <jsign.uy@gmail.com>

--- a/gateway/public/html/faults.gohtml
+++ b/gateway/public/html/faults.gohtml
@@ -1,4 +1,4 @@
-{{template "header" "Slashing Index"}}
+{{template "header" "Fault Index"}}
 {{template "menu" .}}
 <div class=".aligner-item">
     {{template "table" .}}
