--- a/gateway/public/html/index.gohtml
+++ b/gateway/public/html/index.gohtml
@@ -4,16 +4,16 @@
         <head>
             <meta charset="utf-8">
             <title>{{.}}</title>
-            <link rel="apple-touch-icon" sizes="180x180" href="/public/img/apple-touch-icon.png">
-            <link rel="icon" type="image/png" sizes="32x32" href="/public/img/favicon-32x32.png">
-            <link rel="icon" type="image/png" sizes="16x16" href="/public/img/favicon-16x16.png">
-            <link rel="manifest" href="/public/img/site.webmanifest">
-            <link rel="stylesheet" href="/public/css/all.min.css">
-            <link rel="stylesheet" href="/public/css/style.css">
+            <link rel="apple-touch-icon" sizes="180x180" href="public/img/apple-touch-icon.png">
+            <link rel="icon" type="image/png" sizes="32x32" href="public/img/favicon-32x32.png">
+            <link rel="icon" type="image/png" sizes="16x16" href="public/img/favicon-16x16.png">
+            <link rel="manifest" href="public/img/site.webmanifest">
+            <link rel="stylesheet" href="public/css/all.min.css">
+            <link rel="stylesheet" href="public/css/style.css">
         </head>
         <body>
             <div class="logo">
-                <img src="/public/img/hex.svg" height="40" alt="textile"/>
+                <img src="public/img/hex.svg" height="40" alt="textile"/>
             </div>
 {{end}}
 
@@ -21,9 +21,9 @@
             <ul class="navbar">
             {{range .MenuItems}}
                 {{if .Selected}}
-                    <li><a class="selected" href="/{{.Path}}">{{.Name}}</a></li>
+                    <li><a class="selected" href="{{.Path}}">{{.Name}}</a></li>
                 {{else}}
-                    <li><a href="/{{.Path}}">{{.Name}}</a></li>
+                    <li><a href="{{.Path}}">{{.Name}}</a></li>
                 {{end}}
             {{end}}
             </ul>
